# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./projects";
 export * from "./team";
 export * from "./content";
+export * from "./partners";
